src/styles/gameboard.css
.gameboard {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
}

.board-square {
  height: 75px;
  width: 75px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.white-square {
  background-color: #eee;
}

.black-square {
  background-color: #777;
}

.white,
.black {
  color: #222;
}

.highlight {
  animation-name: pulse;
  animation-duration: 0.5s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-timing-function: ease-in-out;
}

div > p:hover {
  cursor: pointer;
}

.message {
  font-size: 24px;
  margin-top: 20px;
  position: fixed;
  top: 775px;
}

@keyframes pulse {
  from {
    transform: scale(1);
  }

  to {
    transform: scale(1.05);
  }
}

